[metadata]
name = vnpy_baostock
version = 1.0.0
url = https://github.com/flytrap/vnpy_baostock
license = MIT
author = flytap
author_email = hiddenstat@gmail.com
description = BaoStock datafeed for vn.py quant trading framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    baostock
    quant
    quantitative
    investment
    trading
    algotrading
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = baostock
